the assignment of the day was half way done

--- a/assignments/nft-preview-card-component-main/index.html
+++ b/assignments/nft-preview-card-component-main/index.html
@@ -16,8 +16,12 @@
 
     <div class="container">
       <div class="nft__preview">
-        <img src="images/image-equilibrium.jpg" alt="" class="nft__img"  >
-
+        <div class="nft__img-container">
+            <img src="images/image-equilibrium.jpg" alt="" class="nft__img" >
+            <div class="light__blue__container">
+              <img src="images/icon-view.svg" alt="">
+            </div>
+        </div>
 
         <div class="text__container">
           <h2>
