--- a/finalDesign/index.html
+++ b/finalDesign/index.html
@@ -23,6 +23,51 @@
               </div>
               <span>zentih</span>
             </div>
+            <div class="story">
+              <div class="story__img">
+                <img
+                  src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+                  alt=""
+                />
+              </div>
+              <span>zentih</span>
+            </div>
+            <div class="story">
+              <div class="story__img">
+                <img
+                  src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+                  alt=""
+                />
+              </div>
+              <span>zentih</span>
+            </div>
+            <div class="story">
+              <div class="story__img">
+                <img
+                  src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+                  alt=""
+                />
+              </div>
+              <span>zentih</span>
+            </div>
+            <div class="story">
+              <div class="story__img">
+                <img
+                  src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+                  alt=""
+                />
+              </div>
+              <span>zentih</span>
+            </div>
+            <div class="story">
+              <div class="story__img">
+                <img
+                  src="https://images.unsplash.com/photo-1624561172888-ac93c696e10c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+                  alt=""
+                />
+              </div>
+              <span>zentih</span>
+            </div>
           </div>
           <div class="post__container">POst container</div>
         </div>
