--- a/assignments/loopstudios-landing-page-main/index.html
+++ b/assignments/loopstudios-landing-page-main/index.html
@@ -52,6 +52,47 @@
           </p>
         </div>
       </div>
+
+      <div class="our__Creation">
+        <div class="creation__header">
+          <h1>Our Creation</h1>
+          <button>See all</button>
+        </div>
+        <div class="creation__content">
+          <div class="img__container">
+            <img src="images/desktop/image-deep-earth.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-night-arcade.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-soccer-team.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-grid.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-from-above.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-pocket-borealis.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-curiosity.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+          <div class="img__container">
+            <img src="images/desktop/image-fisheye.jpg" alt="" />
+            <p class="name">DEEP EARTH</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
